...
  static const actionPerformanceTerminePart1 = 'Vous avez terminé votre bilan ! Il est de ';
  static const actions = 'Actions';
  static const actionsRealiseesEnFrance = 'Actions réalisées ensemble partout en France';
  static const actionsTermineesVide = 'Vous n’avez pas encore terminé d’action.';
  static const actionsTermineesVideDetail =
      'Pour y remédier, choisissez une action recommandée qui vous plaît, effectuez-la à l’aide de nos astuces et cliquez sur “J’ai relevé le défi !”.';
  static const adresseEmail = 'Mon adresse email';
  static const adresseEmailHint = 'Format attendu : nom@domaine.fr';
  static const adultes = 'Adulte(s)';
  static const afficherPlusDeSuggestions = 'Afficher plus de suggestions';
  static const affinezVosRecommandations = 'Affinez vos recommandations';
  static const affinezVosRecommandationsDetails = 'Répondez à quelques questions rapides sur le thème de votre choix';
  static const aidListTitle = '**Aides financières** et bons plans **chez vous**';
...
  static const bienvenueSur = 'Bienvenue sur J’agis ! Faisons connaissance…';
  static const bienvenueSurDetails = 'Nous avons quelques questions à vous poser pour personnaliser votre expérience !';
  static const bonjour = 'Bonjour,';
  static const catalogueActions = 'Catalogue d’actions';
  static const cesInformationsSontEllesCorrectes =
      'La connexion a été établie avec succès. Dans le futur, pour modifier vos informations, rendez-vous dans';
  static const cestParti = 'C’est parti !';
  static const cestPresqueTermine = 'C’est presque terminé !';
  static const choisirCommeAdressePrincipale = 'Enregistrer';
  static const choisirCommeAdressePrincipaleDescription =
      'Pratique : souhaitez-vous enregistrer votre adresse principale pour une prochaine fois ?';
  static const choisissezUneAdresse = 'Choisissez une adresse';
  static const codeDeVerification = 'Code de vérification';
  static const codePostal = 'Code postal';
  static const combienEtesVousDansVotreLogement = 'Combien êtes-vous dans votre logement (vous inclus) ?';
  static const commencer = 'Commencer';
  static const commencerVotreDemarche = 'Commencer votre démarche';
  static const commentPourrionsNousLAmeliorer = 'Comment pourrions-nous l’améliorer ?';
  static const commune = 'Commune';
  static const confirmer = 'Confirmer';
  static const connexionEtablie = 'Connexion établie';
  static const conseille = 'CONSEILLÉ';
  static const consommationsEnergetiques = 'Consommations énergétiques';
  static const consommes = 'consommés';
  static const continuer = 'Continuer';
  static const contributeursOpenStreetMap = 'Contributeurs OpenStreetMap';
  static const coutAnnuel = 'Coût annuel';
  static const creerMonCompte = 'Créer mon compte';
  static const creerUnCompte = 'Créer un compte';
  static const dateDeNaissance = 'Date de naissance';
  static const dateDeNaissanceDescription = 'Nécessaire pour faciliter votre identification';
  static const declarationAccessibilite = 'Déclaration d’accessibilité';
  static const declarationAccessibiliteSite = 'https://jagis.beta.gouv.fr/accessibilite';
  static const dejaConsultees = 'Déjà consultées';
...

**Personnalisez votre expérience** en quelques questions et obtenez des **idées d’actions** concrètes, avec tous les **outils**, **adresses** et **aides financières** pour y arriver !''';
  static const impactCo2 = 'Impact CO₂';
  static const impactCo2Description = 'Des informations fiables et sourcées issues des données environnementales de l’ADEME';
  static const impactCo2Url = 'https://impactco2.fr';
  static const ingredients = 'Ingrédients';
  static const jaiDejaUnCompte = 'J’ai déjà un compte';
  static const jaiReleveLeDefi = 'J’ai relevé le défi !';
  static const jeCreeMonCompte = 'Je crée mon compte';
  static const jePrefereRentrerLeCodeManuellement = 'Je préfère rentrer le code manuellement';
  static const jusqua = 'Jusqu’à ';
  static const kgCO2e = 'kgCO2e';
  static const lAdresseDeMaResidencePrincipale = 'L’adresse de ma résidence principale';
  static const laConnexionAEchoue = 'La connexion a échoué';
  static const laConnexionAEchoueAstuce = 'Astuce : Tentez avec votre **numéro de PRM**.';
  static const laConnexionAEchoueDescription =
...
  static const mangerBougerDescription = 'Pour vous aider jour après jour à manger varié et équilibré.';
  static const mangerBougerNom = 'La fabrique à Menus';
  static const mangerBougerUrl = 'https://www.mangerbouger.fr/manger-mieux/la-fabrique-a-menus';
  static const meConnecter = 'Me connecter';
  static const mentionsLegales = 'Mentions légales';
  static const mentionsLegalesSite = 'https://jagis.beta.gouv.fr/mentions-legales';
  static const menu = 'Menu';
  static const merciPourVotreSoutien = 'Merci pour votre soutien !';
  static const merciPourVotreSoutienDescription = '''
Vous avez fait partie des **premiers utilisateurs** à tester ce nouveau service, à nous faire vos retours, et nous permettre de nous améliorer.

Pour cela, nous aimerions vous remercier avec **ce badge** et 200 feuilles pour commencer cette **nouvelle aventure…**''';
  static const mesActionsRecommandeesEpuiseeDescription =
...
  static const moinsDe35m2 = 'Moins de 35 m²';
  static const monClassement = 'Mon classement';
  static const monEmpreinteEcologique = 'Mon empreinte écologique';
  static const monIdentite = 'Mon identité';
  static const monLogement = 'Mon logement';
  static const monLogementPlusDe15Ans = 'Mon logement a-t-il plus de 15 ans ?';
  static const monProfil = 'Mon profil';
  static const monPseudonyme = 'Mon pseudonyme';
  static const monPseudonymeIndice = 'Doit être composé de 3 à 21 caractères. Lettres et chiffres uniquement.';
  static const nom = 'Nom';
  static const nomDeFamille = 'Nom de famille (du titulaire du contrat électrique)';
  static const nombreDePartsFiscales = 'Nombre de parts fiscales de votre foyer';
  static const nombreDePartsFiscalesDescription = '(Pré-calculé à partir des membres de votre foyer)';
  static const non = 'Non';
...
  static const nousPreparonsVosRecommandationsPersonnalisees = 'Nous préparons vos recommandations personnalisées…';
  static const numeroDePrm = 'Numéro de PRM';
  static const numeroDePrmHint = 'Il s’agit d’une suite de 14 chiffres qui identifie le logement sur le réseau électrique';
  static const obligatoire = 'Obligatoire';
  static const onRepondAVosQuestions = 'On répond à vos questions !';
  static const onSeLanceLeDefi = 'On se lance le défi ?';
  static const optionsAvancees = 'Options avancées';
  static const ouHabitezVous = 'Où habitez-vous ?';
  static const ouTrouverCeNumero = 'Où trouver ce numéro ?';
  static const ouTrouverCesInformations = 'Où trouver ces informations ?';
  static const ouTrouverCesInformationsReponse = '''
Le revenu fiscal de référence et votre nombre de parts se trouvent sur la 1ère page de votre dernier avis d’impôt.

...
  static const simulerMonAide = 'Simuler mon aide';
  static const sources = 'Sources :';
  static const statistiques = 'Statistiques';
  static const statistiquesSite = 'https://jagis.beta.gouv.fr/statistiques';
  static const suggestions = 'Suggestions';
  static const supprimerMonAdresse = 'Supprimer mon adresse';
  static const supprimerVotreCompte = 'Supprimer mon compte';
  static const supprimerVotreCompteConfirmation = 'Veuillez confirmer la suppression du compte';
  static const supprimerVotreCompteContenu =
      'Vous pouvez à tout moment choisir de supprimer votre compte ainsi que l’ensemble des données qui y sont associées.';
  static const surVotreCompteurLinky = 'Sur votre compteur Linky';
  static const surVotreCompteurLinkyDetail =
      'Faire défiler les affichages du compteur (appui sur la touche +) jusqu’à lire la valeur du “numéro de PRM”.';
...
