appId: "fr.gouv.agir.dev2"
---
- launchApp: 
    appId: "fr.gouv.agir.dev2"
    clearState: true
    clearKeychain: true 
- tapOn: "Je crée mon compte"
- tapOn:
    id: "Mon adresse email"
- inputText: "lucas9@agir.dev"
- tapOn: "Suiv."
- tapOn: "Créer mon compte"
- tapOn: "Je préfère rentrer le code manuellement"
- tapOn: "Code de vérification"
- inputText: "999999"
- tapOn:
    id: "Mon pseudonyme"
- inputText: "Lucas"
- tapOn: "Suiv."
- tapOn: "Ok"
- tapOn: "Continuer"
- inputText: "39100"
- tapOn: "Ok"
- tapOn: "Commune"
- tapOn: "DOLE"
- tapOn: "Continuer"
- tapOn: "La cuisine et l’alimentation"
- tapOn: "Continuer"
- tapOn: "C’est parti !"
- tapOn: "Menu"
- tapOn: "Mon profil"
- tapOn: "Options avancées"
- tapOn: "Supprimer mon compte"
- tapOn: "Confirmer"
- assertVisible: "J’ai déjà un compte"
- stopApp: "fr.gouv.agir.dev2"